--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -38,30 +38,32 @@
     </div>
 
     <!-- Banner -->
-    <div class = "aboutBanner">
-        <img src = "../img/logo/verticle01.png">
+    <div class="aboutBanner">
+        <img src="../img/logo/verticle01.png">
     </div>
 
     <!-- 關於凱茂 -->
-    <div class="container vh-100 mt-5">
-        <div class="row mt-5">
-            <div class="col-xl-5 my-5">
-                <h1 class="indexh1">ABOUT <br />US.</h1>
-                <h3 class="indexh2">關於凱茂</h3>
-                <p class="indexp txtIn">凱茂資訊 成立於2009年，迄今已成為多家知名軟、硬體大廠之大型客戶承銷商。目前除了臺中總部，服務耕耘客群也遍及全國北中南。</p>
-                <p class="indexp txtIn">
-                    凱茂團隊以即時且反應迅速服務機制，協助客戶於最快時間獲得問題解答與排除，以及在需求時間內到場技術支援服務，另外針對客戶不同需求來提供相對應解決方案的顧問服務及專案建置。</p>
-            </div>
+    <div class="container-fluid aboutMain">
+        <div class="container vh-80">
+            <div class="row">
+                <div class="col-lg-6 my-5 aboutContent">
+                    <h1 class="indexh1">ABOUT <br />US.</h1>
+                    <h3 class="indexh2">關於凱茂</h3>
+                    <p class="indexp txtIn">凱茂資訊 成立於2009年，迄今已成為多家知名軟、硬體大廠之大型客戶承銷商。目前除了臺中總部，服務耕耘客群也遍及全國北中南。</p>
+                    <p class="indexp txtIn">
+                        凱茂團隊以即時且反應迅速服務機制，協助客戶於最快時間獲得問題解答與排除，以及在需求時間內到場技術支援服務，另外針對客戶不同需求來提供相對應解決方案的顧問服務及專案建置。</p>
+                </div>
 
-            <div class="col-xl-7 KAIMAUDiv">
-                <img class="KAIMAUImage" src="../img/index/aboutus00.png" alt="圖片 ">
+                <div class="col-lg-6 KAIMAUDiv">
+                    <img class="KAIMAUImage" src="../img/index/aboutus00.png" alt="圖片 ">
+                </div>
             </div>
         </div>
     </div>
 
-    
+
     <!-- 合作夥伴 -->
-    <div class="container vh-100 mt-5">
+    <div class="container mt-5">
         <div class="py-3">
             <h2 class="text-center indexh2 mt-5">合作夥伴</h2>
             <p class="indexp px-30 txtIn">
@@ -75,31 +77,31 @@
 
                 <div class="carousel-item active ">
                     <div class="row pt-5">
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="Image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
                                 <img src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
                                 <img src="../資訊圖庫/合作夥伴logo/aruba.svg" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/Dell_Logo.png"
-                                    alt="Image" class=" img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/Dell_Logo.png" alt="Image" class=" img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/25/Hep_200x200_1.jpg"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="https://www.kx.com.tw/file/2017/10/25/Hep_200x200_1.jpg" alt="Image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
                     </div>
@@ -107,34 +109,31 @@
 
                 <div class="carousel-item ">
                     <div class="row pt-5">
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/microsoft.png"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/microsoft.png" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/11/03/nutanix_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="https://www.kx.com.tw/file/2017/11/03/nutanix_200x200.jpg" alt="Image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg" alt="Image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/DVC.svg"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/DVC.svg" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
                     </div>
@@ -142,34 +141,31 @@
 
                 <div class="carousel-item">
                     <div class="row pt-5">
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/FORTIGATE.png"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/FORTIGATE.png" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-01.jpg"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-01.jpg" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="Image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/hewlett-packard-enterprise.png"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/hewlett-packard-enterprise.png" alt="Image"
+                                    class="img-thumbnail">
                             </a>
                         </div>
-                        <div class="col-xl-2">
+                        <div class="col-md-2">
                             <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png"
-                                    alt="Image" class="img-thumbnail">
+                                <img src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png" alt="Image" class="img-thumbnail">
                             </a>
                         </div>
                     </div>
@@ -197,18 +193,19 @@
     </div>
 
     <!-- 凱茂理念 -->
-    <div class="container vh-100 mt-5">
-        <div class="row mt-5">
-            <div class="col-xl-6 mt-5">
-                <h2 class="indexh2 mt-5">凱茂理念</h2>
-                <h1 class="indexh1 mt-5">Take KAIMAU<br />Take the Future.</h1>
-                <p class="indexp txtIn pr-5">
+    <div class = "container-fluid" style = "background-color: #f3f3f3;">
+    <div class="container mt-5 aboutContent">
+        <div class="row">
+            <div class="col-lg-6">
+                <h2 class="indexh2">凱茂理念</h2>
+                <h1 class="indexh1">Take KAIMAU<br />Take the Future.</h1>
+                <p class="indexp txtIn">
                     資安議題日漸受重視，資訊安全的威脅無所不在，不論是企業或是政府組織，潛藏在暗處的惡意攻擊者都是一視同仁，凱茂資訊洞察產業趨勢與眾多資訊安全系統的原廠及代理商合作，針對不同產業對資安的需求，依照客戶的情境提出精準完整的解決方案。
                 </p>
             </div>
 
-            <div class="col-xl-6">
-                <div class="cube ">
+            <div class="col-lg-6">
+                <div class="cube">
                     <div class="top"></div>
                     <div>
                         <span style="--i:0">
@@ -301,10 +298,11 @@
         <!-- <div><img src="" alt=""></div> -->
 
     </div>
+</div>
 
 
     <!-- 里程碑 -->
-    <div class = "milestone">
+    <div class="milestone">
         <h2 class="indexh2 text-center">里程碑</h2>
 
         <div class="timeline mt-5">
@@ -312,7 +310,7 @@
 
             <div class="section">
                 <div class="bead"></div>
-                <div class="content-timeline txtR" >
+                <div class="content-timeline txtR">
                     <!-- <img src="./HP_image/timeline/c01.png"> -->
                     <h2 class='indexh2'>2009年</h2>
                     <p class="indexp">凱茂資訊股份有限公司成立。</p>
@@ -339,7 +337,7 @@
 
             <div class="section">
                 <div class="bead"></div>
-                <div class="content-timeline txtL" >
+                <div class="content-timeline txtL">
                     <!-- <img src="./HP_image/timeline/c04.png"> -->
                     <h2 class='indexh2'>2014年</h2>
                     <p class="indexp">成為Intel Technology Provider Gold Partner。</p>
@@ -357,7 +355,7 @@
 
             <div class="section">
                 <div class="bead"></div>
-                <div class="content-timeline txtL" >
+                <div class="content-timeline txtL">
                     <!-- <img src="./HP_image/timeline/c06.png"> -->
                     <h2 class='indexh2'>2021年</h2>
                     <p class="indexp">營業額連續三年成長20%。 </p>
