--- a/html/index.html
+++ b/html/index.html
@@ -86,7 +86,7 @@
         <div class="container" style="margin-top:1200px">
             <div class="row">
                 <div class="col-lg-6">
-                    <div style="padding:80px; margin-top: 100px;margin-bottom: 50px;">
+                    <div class = "ServiceContent">
                         <h1 class="indexh1">WHAT WE<br>DO.
                             <h2 class="indexh2">服務項目</h2>
                             <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
@@ -242,15 +242,14 @@
 
 
         <footer>
-            <div class="container-fluid footer p-5">
+            <div class="container-fluid footer">
                 <div style="text-align:center; width:100% ;margin:auto;">
                     <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
                     <hr>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Home</a>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">About</a>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Services</a>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Contact</a>
-                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">Product</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">HOME</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">ABOUT</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">NEWS</a>
+                    <a href="https://www.google.com.tw/?hl=zh_TW" class="m-2">CONTACT</a>
                     <br>
                     <br>
                     <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
