--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -63,7 +63,7 @@
 
 
     <!-- 合作夥伴 -->
-    <div class="container mt-5">
+    <div class="container mt-5 pb-5">
         <div class="py-3">
             <h2 class="text-center indexh2 mt-5">合作夥伴</h2>
             <p class="indexp px-30 txtIn">
@@ -71,7 +71,8 @@
         </div>
 
         <!-- 幻燈片 -->
-        <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel" data-interval="1000000">
+        <div id="carouselExampleControls1" class="carousel slide carousel-01" data-ride="carousel"
+            data-interval="1000000">
             <!-- 輪播內容 -->
             <div class="carousel-inner">
 
@@ -190,115 +191,248 @@
             </ol>
 
         </div>
+        <div id="carouselExampleControls2" class="carousel slide carousel-02" data-ride="carousel"
+            data-interval="1000000">
+            <!-- 輪播內容 -->
+            <div class="carousel-inner">
+
+                <div class="carousel-item active ">
+                    <div class="row pt-5">
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="Image"
+                                    class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/aruba.svg" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        
+                    </div>
+                </div>
+
+                <div class="carousel-item ">
+                    <div class="row pt-5">
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/Dell_Logo.png" alt="Image" class=" img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="https://www.kx.com.tw/file/2017/10/25/Hep_200x200_1.jpg" alt="Image"
+                                    class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/microsoft.png" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row pt-5">
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="https://www.kx.com.tw/file/2017/11/03/nutanix_200x200.jpg" alt="Image"
+                                    class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg" alt="Image"
+                                    class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row pt-5">
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/DVC.svg" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/FORTIGATE.png" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-01.jpg" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row pt-5">
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="Image"
+                                    class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/hewlett-packard-enterprise.png" alt="Image"
+                                    class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- 左右箭頭 -->
+            <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls2"
+                data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#carouselExampleControls2"
+                data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </button>
+            <!-- 指標控制 -->
+            <ol class="carousel-indicators mt-3">
+                <li data-target="#carouselExampleControls2" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleControls2" data-slide-to="1"></li>
+                <li data-target="#carouselExampleControls2" data-slide-to="2"></li>
+                <li data-target="#carouselExampleControls2" data-slide-to="3"></li>
+                <li data-target="#carouselExampleControls2" data-slide-to="4"></li>
+
+            </ol>
+
+        </div>
     </div>
 
     <!-- 凱茂理念 -->
-    <div class = "container-fluid" style = "background-color: #f3f3f3;">
-    <div class="container mt-5 aboutContent">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2 class="indexh2">凱茂理念</h2>
-                <h1 class="indexh1">Take KAIMAU<br />Take the Future.</h1>
-                <p class="indexp txtIn">
-                    資安議題日漸受重視，資訊安全的威脅無所不在，不論是企業或是政府組織，潛藏在暗處的惡意攻擊者都是一視同仁，凱茂資訊洞察產業趨勢與眾多資訊安全系統的原廠及代理商合作，針對不同產業對資安的需求，依照客戶的情境提出精準完整的解決方案。
-                </p>
+    <div class="container-fluid" style="background-color: #f3f3f3;">
+        <div class="container mt-5 aboutContent">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="indexh2">凱茂理念</h2>
+                    <h1 class="indexh1">Take KAIMAU<br />Take the Future.</h1>
+                    <p class="indexp txtIn">
+                        資安議題日漸受重視，資訊安全的威脅無所不在，不論是企業或是政府組織，潛藏在暗處的惡意攻擊者都是一視同仁，凱茂資訊洞察產業趨勢與眾多資訊安全系統的原廠及代理商合作，針對不同產業對資安的需求，依照客戶的情境提出精準完整的解決方案。
+                    </p>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="cube">
+                        <div class="top"></div>
+                        <div>
+                            <span style="--i:0">
+                                <h4>Take the Future</h4>
+                                <h4>Take the Future</h4>
+                            </span>
+                            <span style="--i:1">
+                                <h4>Take KAIMAU</h4>
+                                <h4>Take KAIMAU</h4>
+                            </span>
+
+                            <span style="--i:2">
+                                <h4>Take the Future</h4>
+                                <h4>Take the Future</h4>
+                            </span>
+
+                            <span style="--i:3">
+                                <h4>Take KAIMAU</h4>
+                                <h4>Take KAIMAU</h4>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="cube1 ">
+                        <div class="top1"></div>
+                        <div>
+                            <span style="--i:0">
+                                <h2>Take<br />the<br />Future</h2>
+                                <h2>Take<br />the<br />Future</h2>
+                            </span>
+                            <span style="--i:1">
+                                <h2>Take KAIMAU</h2>
+                                <h2>Take KAIMAU</h2>
+                            </span>
+
+                            <span style="--i:2">
+                                <h2>Take<br />the<br />Future</h2>
+                                <h2>Take<br />the<br />Future</h2>
+                            </span>
+
+                            <span style="--i:3">
+                                <h2>Take KAIMAU</h2>
+                                <h2>Take KAIMAU</h2>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="cube2 ">
+                        <div class="top2"></div>
+                        <div>
+                            <span style="--i:0">
+                                <h2>Take <br /> the<br /> Future</h2>
+                                <h2>Take <br /> the<br /> Future</h2>
+                            </span>
+                            <span style="--i:1">
+                                <h2>Take <br /> KAIMAU</h2>
+                                <h2>Take <br /> KAIMAU</h2>
+                            </span>
+
+                            <span style="--i:2">
+                                <h2>Take <br /> the<br /> Future</h2>
+                                <h2>Take <br /> the<br /> Future</h2>
+                            </span>
+
+                            <span style="--i:3">
+                                <h2>Take <br /> KAIMAU</h2>
+                                <h2>Take <br /> KAIMAU</h2>
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="col-lg-6">
-                <div class="cube">
-                    <div class="top"></div>
-                    <div>
-                        <span style="--i:0">
-                            <h4>Take the Future</h4>
-                            <h4>Take the Future</h4>
-                        </span>
-                        <span style="--i:1">
-                            <h4>Take KAIMAU</h4>
-                            <h4>Take KAIMAU</h4>
-                        </span>
+            <!-- <div>
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#eee"></rect>
+                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+                </svg>
+                <img src="" alt="">
+            </div> -->
+            <!-- <div>
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
+                    <title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#eee"></rect>
+                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+                </svg>
+                <img src="" alt="">
+            </div> -->
+            <!-- <div><img src="" alt=""></div> -->
 
-                        <span style="--i:2">
-                            <h4>Take the Future</h4>
-                            <h4>Take the Future</h4>
-                        </span>
-
-                        <span style="--i:3">
-                            <h4>Take KAIMAU</h4>
-                            <h4>Take KAIMAU</h4>
-                        </span>
-                    </div>
-                </div>
-
-                <div class="cube1 ">
-                    <div class="top1"></div>
-                    <div>
-                        <span style="--i:0">
-                            <h2>Take<br />the<br />Future</h2>
-                            <h2>Take<br />the<br />Future</h2>
-                        </span>
-                        <span style="--i:1">
-                            <h2>Take KAIMAU</h2>
-                            <h2>Take KAIMAU</h2>
-                        </span>
-
-                        <span style="--i:2">
-                            <h2>Take<br />the<br />Future</h2>
-                            <h2>Take<br />the<br />Future</h2>
-                        </span>
-
-                        <span style="--i:3">
-                            <h2>Take KAIMAU</h2>
-                            <h2>Take KAIMAU</h2>
-                        </span>
-                    </div>
-                </div>
-
-                <div class="cube2 ">
-                    <div class="top2"></div>
-                    <div>
-                        <span style="--i:0">
-                            <h2>Take <br /> the<br /> Future</h2>
-                            <h2>Take <br /> the<br /> Future</h2>
-                        </span>
-                        <span style="--i:1">
-                            <h2>Take <br /> KAIMAU</h2>
-                            <h2>Take <br /> KAIMAU</h2>
-                        </span>
-
-                        <span style="--i:2">
-                            <h2>Take <br /> the<br /> Future</h2>
-                            <h2>Take <br /> the<br /> Future</h2>
-                        </span>
-
-                        <span style="--i:3">
-                            <h2>Take <br /> KAIMAU</h2>
-                            <h2>Take <br /> KAIMAU</h2>
-                        </span>
-                    </div>
-                </div>
-            </div>
         </div>
-
-        <!-- <div>
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"></rect>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
-                <img src="" alt="">
-            </div> -->
-        <!-- <div>
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"></rect>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
-                <img src="" alt="">
-            </div> -->
-        <!-- <div><img src="" alt=""></div> -->
-
     </div>
-</div>
 
 
     <!-- 里程碑 -->
