--- a/html/news.html
+++ b/html/news.html
@@ -160,8 +160,8 @@
                     <img class="card-img" src="../資訊圖庫/A22.jpg" alt="1">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">軟體銷售服務</h3>
-                        <p class="card-text indexp txtIn">
-                            微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。
+                        <p class="card-text indexp2 txtIn">
+                            微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬軟體、開發工具、備份備援、郵件伺服器及其他等規劃與採購服務。
                         </p>
                     </div>
                 </div>
@@ -169,37 +169,36 @@
                     <img class="card-img" src="../資訊圖庫/A10.jpg" alt="2">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">雲端銷售服務</h3>
-                        <p class="card-text indexp txtIn">
-                            凱茂資訊為微軟的雲端服務供應商(CSP),提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練,整合企業内外的Web
-                            AP及應用。</p>
+                        <p class="card-text indexp2 txtIn">
+                            凱茂資訊為微軟的雲端服務供應商(CSP),提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練。</p>
                     </div>
                 </div>
                 <div class="col-xl-4 card py-3">
                     <img class="card-img" src="../資訊圖庫/A01.jpg" alt="3">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">系統整合服務</h3>
-                        <p class="card-text indexp txtIn">整合客戶現有資訊架構,根據客戶規模規劃建置適合之資訊系統。</p>
+                        <p class="card-text indexp2 txtIn">整合客戶現有資訊架構,根據客戶規模規劃建置適合之資訊系統。</p>
                     </div>
                 </div>
                 <div class="col-xl-4 card py-3">
                     <img class=" card-img" src="../資訊圖庫/A24.jpg" alt="4">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">網路規劃服務</h3>
-                        <p class="card-text indexp txtIn">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台, 並包含機房機櫃等規劃及建置。</p>
+                        <p class="card-text indexp2 txtIn">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台, 並包含機房機櫃等規劃及建置。</p>
                     </div>
                 </div>
                 <div class="col-xl-4 card py-3">
                     <img class="card-img" src="../資訊圖庫/A11.jpg" alt="5">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">資訊安全服務</h3>
-                        <p class="card-text indexp txtIn">因應資安法規,協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
+                        <p class="card-text indexp2 txtIn">因應資安法規,協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
                     </div>
                 </div>
                 <div class="col-xl-4 card py-3">
                     <img class="card-img" src="../資訊圖庫/A21.jpg" alt="6">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">技術維護服務</h3>
-                        <p class="card-text indexp txtIn">擁有專業的技術團隊,協助客戶規劃與建置安全網路、機房維與相關軟體售前與售後顧問服務。</p>
+                        <p class="card-text indexp2 txtIn">擁有專業的技術團隊,協助客戶規劃與建置安全網路、機房維與相關軟體售前與售後顧問服務。</p>
                     </div>
                 </div>
 
