--- a/new animetion/ia3.html
+++ b/new animetion/ia3.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-      <img src="../004.jpg" type="img/jepg"/>
+      <img src="./004.jpg" type="img/jepg"/>
     <div id="bg"></div>
   </div>
   <script src="./ia3.js"></script>
