--- a/new animetion/ia2 copy.html
+++ b/new animetion/ia2 copy.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     
     <title>Document</title>
 </head>
 <body>
     <h1>welcome，kaimau</h1>
-    <div clsss="kaimau-image"></div>
+    <div id="img"></div>
     
 </body>
 </html>
 
-<script src="./ia2.js"></script>
+<script src="/ia2.js"></script>
