--- a/html/index.html
+++ b/html/index.html
@@ -60,13 +60,18 @@
 
 
         </div>
-        <div><h2 class = "h2intro">Take KAIMAU<br>Take the Future.</h2></div>
+        <div><h2 class = "h2intro">Welcome To KAIMAU.</h2></div>
         <div class="indexanimate">
-            
-            <img src="../img/indexanimation/004.jpg" type="img/jepg"/>
+            <div class="overlay">c</div>
+            <img class = "animateImagebg" src="../img/indexanimation/004.jpg" type="img/jepg"/>
           <div id="animation-bg"></div>
           
         </div>
+        <div class = "introContent">
+            <h2 data-aos="fade-up" class = "h2intro01">Take KAIMAU,<br>Take the Future.</h2>
+            <h2 data-aos="fade-up" class = "h2intro02">凱茂資訊</h2>
+        </div>
+
 
         <!-- 服務項目 -->
         <div class="container-fluid indexService">
