--- a/html/index.html
+++ b/html/index.html
@@ -62,13 +62,16 @@
         </div>
         <div><h2 class = "h2intro">Welcome To KAIMAU.</h2></div>
         <div class="indexanimate">
+            <div class = "overlay"></div>
             <img class = "animateImagebg" src="../img/indexanimation/004.jpg" type="img/jepg"/>
           <div id="animation-bg"></div>
           
         </div>
         <div class = "introContent">
-            <h2 data-aos="fade-up" class = "h2intro01">Take KAIMAU,<br>Take the Future.</h2>
-            <h2 data-aos="fade-up" class = "h2intro02">凱茂資訊</h2>
+            <div data-aos="fade-up">
+                <h2 class = "h2intro01">Take KAIMAU,<br>Take the Future.</h2>
+                <h2 class = "h2intro02">凱茂資訊</h2>
+            </div>
         </div>
 
 
